# KissBot

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  AUDIT_ASK_PIPELINE.md  CHANGELOG.md  CLEANUP_GUIDE.md  EULA_FR.md  LICENSE  MIGRATION_PLAN.md  MONITOR_REFACTOR_CHECKLIST.md  MONITOR_REFACTOR_COMPLETION.txt  README.md  ROADMAP_V2.md  SCRIPTS_STACK.md  TODO_PIPELINE_REFACTOR.md  bot.py  bot.py.twitchio3.old  check_current_scopes.py  check_scopes.py  debug_irc_structure.py  eventsub_hub.py  exchange_oauth_code.py  fix_gamecache_tests.py  kissbot.sh  main.py  main.py.backup_full  main.py.twitchio3.old  metrics.json  pyproject.toml  pytest.ini  refresh_tokens.py  regenerate_bot_token.py  regenerate_bot_token_manual.py  requirements-dev.txt  requirements.txt  run_with_venv.sh  setup.cfg  supervisor_v1.py  test_auth_manager.py  (+24 more)
.github/: copilot-instructions.md
_OLD_backends/: llm_handler.py  steam-guard.me  translator.py
_OLD_commands/: registry.py
_OLD_intelligence/: neural_pathway_manager.py
backends/: KissBot-standalone.code-workspace  __init__.py  game_cache.py  game_lookup.py  game_lookup_rust.py  music_cache.py  quantum_game_cache.py  wikipedia_handler.py
braindev/: README.md
commands/: game_commands.py  intelligence_commands.py  quantum_commands.py  registry.py  translation.py  utils_commands.py
config/: config.sample.yaml  config.test-supervisor.yaml.example  config.test.yaml  config.test.yaml.example  config.yaml.example  enhanced_patterns.yaml  minimal_patterns.yaml
core/: __init__.py  analytics_handler.py  bot_types.py  cache.py  cache_interface.py  chat_logger.py  command_logger.py  command_rate_limiter.py  command_router.py  feature_manager.py  handlers.py  ipc_protocol.py  llm_usage_logger.py  memory_profiler.py  message_bus.py  message_handler.py  message_types.py  monitor.py  monitor_client.py  outbound_logger.py  performance_tracker.py  quantum_cache.py  rate_limiter.py  registry.py  stream_announcer.py  system_monitor.py
data/: devs_whitelist.json
database/: AUDIT_LOG_EVENTS.md  __init__.py  crypto.py  init_db.py  manager.py  migrate_game_cache.py  migrate_hub_v1.py  migrate_v4.0.1.py  schema.sql
datasets/: games_testset.json  nahl_game_acronyms_complete.json
debug/: README.md  test_gamecategory.py
delta-s3-rust/: BUILD_VPS_OPTIMIZED.md  Cargo.toml  README.md
delta-s3-rust/src/: lib.rs
docs/: ANALYSE_GLOBALE_OPTIMISATIONS.md  ARCHITECTURE.md  AUDIT_COMMANDS_PHASE3.3.md  CI_CD.md  DATABASE_ARCHITECTURE.md  DEBUG_STREAMING.md  DEPLOYMENT_GUIDE.md  EVENTSUB_HUB.md  EVENTSUB_RETRY_MECHANISM.md  FEATURE_FLAGS.md  INDEX.md  MIGRATION_DATABASE.md  MIGRATION_PYTWITCHAPI.md  MISTRAL_7B_OPTIMIZATIONS.md  MISTRAL_AI_CACHE_SOLUTION.md  MODERATOR_REQUIREMENT.md  MONITORING.md  MONITOR_CLIENT_GUIDE.md  MONITOR_REFACTOR_CHANGELOG.md  MONITOR_REFACTOR_SUMMARY.md  MULTI_PROCESS_ARCHITECTURE.md  OAuth_AUTO_REFRESH.md  PHASE1_ARCHITECTURE.md  PHASE2.6_VALIDATION_REPORT.md  PHASE2_ARCHITECTURE.md  PHASE3.2_BOT_MENTIONS.md  PHASE3.3_RELEASE_NOTES.md  PHASE3.3_STREAM_MONITORING.md  PHASE3_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT.md  PROTOCOL_MONITOR.md  QUANTUM_SYSTEM.md  README.md  README_MONITOR.md  SCOPE_VALIDATION.md  SESSION_2025-11-01_PHASE3.3.md  SMART_RESPONSES.md  STREAM_ANNOUNCEMENTS_CONFIG.md  SYSTEM_MONITORING.md  TESTING.md  (+4 more)
intelligence/: __init__.py  core.py  enhanced_patterns_loader.py  entropy_calculator.py  joke_cache.py  neural_pathway_manager.py  neural_prometheus.py  quantum_metrics.py  unified_quantum_classifier.py
kissbot-game-engine/: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  start_server.sh  test_server.sh
kissbot-game-engine/benches/: cache_benchmark.rs  ranking_benchmark.rs
kissbot-game-engine/python/: example.py
kissbot-game-engine/python/kissbot_game_engine/: __init__.py
kissbot-game-engine/src/: engine.rs  error.rs  lib.rs  python.rs
kissbot-game-engine/src/cache/: mod.rs  sqlite.rs
kissbot-game-engine/src/core/: game_result.rs  mod.rs  search_response.rs
kissbot-game-engine/src/providers/: base.rs  mod.rs  steam.rs
kissbot-game-engine/src/ranking/: drakon.rs  fallback.rs  mod.rs
kissbot-game-engine/tests/: integration_test.rs
modules/: base_module.py
proof-of-concept/: .hint  eventsub_chat_poc.py
proof-of-concept/rust-timeout-config/: .gitignore  Cargo.toml  README_RUST.md  timeout_config.rs
proof-of-concept/rust-timeout-config/benches/: timeout_config_bench.rs
rust-supervisor/: Cargo.toml  README.md
rust-supervisor/src/: main.rs
scripts/: backup_db.sh  check_db_token_scopes.py  cleanup_before_push.sh  hub_ctl.py  inspect_game_cache.py  migrate_to_vps.sh  migrate_yaml_to_db.py  test_refresh.py  validate_token.py
tests-ci/: COVERAGE_AUDIT_TYPE_GUARDS.md  conftest.py  pytest-ci.ini  requirements-ci.txt  run_ci_tests.sh  test_backends.py  test_bot_startup.py  test_bot_startup.py.twitchio.old  test_commands_loaded.py  test_core.py  test_coverage_audit_validation.py  test_game_cache_system.py  test_game_category_command.py  test_game_commands.py.twitchio.old  test_game_fuzzy_matching.py  test_game_lookup_integration.py  test_intelligence.py  test_neural_v2.py  test_quantum.py  test_translation.py  test_twitch.py  test_type_guards_dict_annotations.py  test_type_guards_float_int_casts.py  test_type_guards_isinstance.py  test_type_guards_none_checks.py
tests-commands/: __init__.py  test_ask_pipeline_e2e.py  test_intelligence.py  test_permissions_all_commands.py  test_session1_system_promo.py  test_sessions_2_3_4.py
tests-local/: HOWTO_DEBUG_STREAMING_LIVE.py  README.md  pytest-local.ini  test_REAL_streaming_debug.py  test_adaptive_prompt_EXTENDED.py  test_adaptive_prompt_REAL_LLM.py  test_adaptive_prompt_visual.py  test_anti_derive_mistral.py  test_ask_config_finale.py  test_ask_gen_short_vs_gen_long.py  test_ask_optimal.py  test_ask_sciences.py  test_backends_with_api.py  test_gen_long_fix.py  test_gen_long_optimal.py  test_intelligence_core_llm.py  test_joke_cache_mistral.py  test_joke_cache_rotation.py  (+12 more)
(+110 files in other folders)
