[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kissbot"
version = "1.0.0"
description = "Twitch Bot with Neural V2 Intelligence - Quantum Code Inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "twitchio>=2.9.0",
    "aiohttp>=3.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["intelligence*", "commands*", "core*", "backends*", "twitch*"]
exclude = ["tests*", "tests-ci*", "tests-local*", "cache*", "kissbot-venv*", "_archive*"]

[tool.pylint]
disable = [
    "too-many-lines",
    "too-many-instance-attributes", 
    "too-many-arguments",
    "too-many-locals",
    "broad-except",
    "logging-fstring-interpolation",
    "unused-argument",
    "import-error",
    "no-name-in-module"
]

[tool.pyright]
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportGeneralTypeIssues = false

[tool.ruff]
# Ignore certaines erreurs pour le Neural V2.0
ignore = [
    "F401",  # Unused imports
    "F841",  # Unused variables  
    "E722",  # Bare except
    "C901",  # Complex functions
    "PLR0913",  # Too many arguments
]