[metadata]
name = kissbot-neural
description = KissBot avec Neural V2.0
version = 2.0.0

[flake8]
max-line-length = 100
extend-ignore = E203, E501, W503, W504, F401, F811, E701, E704
exclude = .git, __pycache__, build, dist, .venv, venv, .tox, *.egg-info
per-file-ignores =
    tests/*:F401,F811,E501,W292,W291
    test_*:F401,F811,E501,W292,W291
    *test*.py:F401,F811,E501,W292,W291

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short