[package]
name = "delta-s3"
version = "3.1.0"
edition = "2021"
authors = ["Serda"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"           # Parallelism
unicode-normalization = "0.1"
memchr = "2.7"          # Fast string search
rand = "0.8"            # For benchmark random sampling

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "benchmark_full"
path = "src/bin/benchmark_full.rs"

[[bin]]
name = "benchmark_276k"
path = "src/bin/benchmark_276k.rs"

[[bin]]
name = "debug_query"
path = "src/bin/debug_query.rs"
