[package]
name = "kissbot-timeout-config"
version = "2.0.0"
edition = "2021"
authors = ["ElSerda <serda@kissbot.io>"]
description = "⏱️ Type-safe HTTPX timeout configuration for neural synapses"
license = "MIT"
repository = "https://github.com/ElSerda/KissBot"
keywords = ["timeout", "httpx", "llm", "config", "neural"]
categories = ["config", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "timeout_config_bench"
harness = false

[lib]
name = "timeout_config"
path = "timeout_config.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
